Updated: Portfolio with images, and titles. Corrected spacing between navigation bar and footer, navigation bar fixed into top position. Need to update Contact page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
 .headerBorder{
-    border-width: 3px;
+    border-bottom: 4px solid #ddd;
+    /* TODO border for header not large enough, currently not working */
+}
+
+.pFooter {
+    font-size: 10pt;
+}
+
+h1 {
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
